All views added, not necessarily accessible from site

--- a/CommunityInformation/CommunityInformation/Views/Home/History.cshtml
+++ b/CommunityInformation/CommunityInformation/Views/Home/History.cshtml
@@ -8,14 +8,14 @@
 
 <head>
     <meta name="viewport" content="width=device-width" />
-    <title>Donbass Contact</title>
+    <title>Donbass History</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.css">
     <link />
 </head>
 
 
 <body>
-    <h1 class="text-center text-primary">Contact</h1>
+    <h1 class="text-center text-primary">History of Donbass</h1>
 </body>
 
 
