Added Home, History, Contact, and Info content.

--- a/CommunityInformation/CommunityInformation/Views/Info/Info.cshtml
+++ b/CommunityInformation/CommunityInformation/Views/Info/Info.cshtml
@@ -16,6 +16,26 @@
 
 <body>
     <h1 class="text-center text-primary">Highlights of Donbass</h1>
+    
+    <div class="container center-block">
+        <div class="row">
+            <div class="col-lg-12">
+                <div class="thumbnail">
+                    <img class="img-responsive" src="https://upload.wikimedia.org/wikipedia/commons/4/4f/UkraineNativeLanguagesCensus2001detailed-en.png" alt="Poor Mining Coal" />
+                    <div class="caption">
+                        Most common native language in urban and rural municipalities of Ukraine according to 2001 census by <a href="https://commons.wikimedia.org/wiki/User:Tovel">Tovel</a>, <a href="https://commons.wikimedia.org/wiki/User:Spesh531">Spesh531</a> is licensed under <a href="https://creativecommons.org/licenses/by-sa/3.0/deed.en">CC BY-SA 3.0</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="col-lg-12">
+                <h3>Live Map of War in Donbass</h3>
+                <iframe style="height:700px" src="https://liveuamap.com/"></iframe>
+            </div>
+        </div>
+    </div>    
 </body>
 
 
