--- a/CommunityInformation/CommunityInformation/Views/Home/Contact.cshtml
+++ b/CommunityInformation/CommunityInformation/Views/Home/Contact.cshtml
@@ -1,5 +1,7 @@
-﻿@{
-    //Layout = null;
+﻿@model CommunityInformation.Models.VisitorMessage
+
+@{
+    Layout = null;
 }
 
 <!DOCTYPE html>
@@ -9,14 +11,43 @@
 <head>
     <meta name="viewport" content="width=device-width" />
     <title>Donbass Contact</title>
+    <link rel="stylesheet" href="~/css/styles.css">
+    <link />
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.css">
     <link />
 </head>
 
 
 <body>
-    <h1 class="text-center text-primary">Contact</h1>
+    <div class="panel panel-success center-block" style="max-width:500px">
+        <div class="panel-heading text-center"><h4>Contact</h4></div>
+        <div class="panel-body">
+
+            <form class="p-a-1" asp-controller="Home" asp-action="Contact" method="post">
+                <div asp-validation-summary="All"></div>
+
+                <div class="form-group">
+                    <label asp-for="Name">Your Name:</label>
+                    <input class="form-control" asp-for="Name" />
+                </div>
+
+                <div class="form-group">
+                    <label asp-for="Email">Your Email:</label>
+                    <input class="form-control" asp-for="Email" />
+                </div>
+
+                <div class="form-group">
+                    <label asp-for="Message">Your Message:</label>
+                    <input class="form-control" asp-for="Message" />
+                </div>
+
+                <div class="text-center">
+                    <button class="btn btn-primary" type="submit">Submit Message</button>
+                </div>
+
+            </form>
+
+        </div>
+    </div>
 </body>
-
-
 </html>
