--- a/CommunityInformation/CommunityInformation/Views/Home/History.cshtml
+++ b/CommunityInformation/CommunityInformation/Views/Home/History.cshtml
@@ -16,6 +16,85 @@
 
 <body>
     <h1 class="text-center text-primary">History of Donbass</h1>
+
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-4">
+                <div class="thumbnail">
+                    <img class="img-responsive" src="https://upload.wikimedia.org/wikipedia/commons/7/76/%D0%A1%D0%B1%D0%BE%D1%80_%D1%83%D0%B3%D0%BB%D1%8F_%D0%B1%D0%B5%D0%B4%D0%BD%D1%8B%D0%BC%D0%B8_%D0%BD%D0%B0_%D0%B2%D1%8B%D1%80%D0%B0%D0%B1%D0%BE%D1%82%D0%B0%D0%BD%D0%BD%D0%BE%D0%B9_%D1%88%D0%B0%D1%85%D1%82%D0%B5.jpg" alt="Poor Mining Coal" />
+                    <div class="caption">
+                        Poor Mining Coal by Nikolay Kasatkin
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-8">
+                <h3>17th Century</h3>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
+                et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
+                ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat
+                nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id
+                est laborum.
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="col-lg-4">
+                <div class="thumbnail">
+                    <img class="img-rounded img-responsive" src="https://upload.wikimedia.org/wikipedia/commons/a/af/The_Donets_Basin_is_the_heart_of_Russia.jpg" alt="Poster. Donbass - The heart of Russia" />
+                    <div class="caption">
+                        Poster. Donbass - The heart of Russia
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-8">
+                <h3>Soviet Era</h3>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
+                et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
+                ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat
+                nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id
+                est laborum.
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="col-lg-4">
+                <div class="thumbnail">
+                    <img class="img-rounded img-responsive" src="https://upload.wikimedia.org/wikipedia/commons/f/f7/Don_Cossacks_monument_Luhansk.JPG" alt="Don Cossacks monument" />
+                    <div class="caption">
+                        Don Cossacks monument by <a href="https://commons.wikimedia.org/wiki/User:Riwnodennyk">Riwnodennyk</a> is licensed under <a href="https://creativecommons.org/licenses/by-sa/3.0/deed.en">CC BY-SA 3.0</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-8">
+                <h3>Independant Ukraine</h3>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
+                et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
+                ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat
+                nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id
+                est laborum.
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="col-lg-4">
+                <div class="thumbnail">
+                    <img class="img-rounded img-responsive" src="https://upload.wikimedia.org/wikipedia/commons/a/a0/OSCE_SMM_monitoring_the_movement_of_heavy_weaponry_in_eastern_Ukraine_%2816544083798%29.jpg" alt="OSCE SMM monitoring the movement of heavy weaponry in eastern Ukraine" />
+                    <div class="caption">
+                        OSCE SMM monitoring the movement of heavy weaponry in eastern Ukraine by <a href="https://www.flickr.com/people/127752590@N03">OSCE Special Monitoring Mission to Ukraine</a> is licensed under <a href="https://creativecommons.org/licenses/by/2.0/deed.en">CC-BY-2.0</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-8">
+                <h3>War in Donbass</h3>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
+                et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
+                ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat
+                nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id
+                est laborum.
+            </div>
+        </div>
+    </div>
+    
 </body>
 
 
