--- a/CommunityInformation/CommunityInformation/Views/Home/Index.cshtml
+++ b/CommunityInformation/CommunityInformation/Views/Home/Index.cshtml
@@ -16,19 +16,58 @@
 
 <body>
     <h1 class="text-center text-primary">Welcome To Donbass, Ukraine!</h1>
-    <div class="row" style="max-height:350px">
-        <div class="col-sm-3">
-            <img class="img-rounded img-responsive" src="https://upload.wikimedia.org/wikipedia/commons/b/b2/Map_of_the_Donbass.png" alt="Donbass Region" />
+
+    <div class="container">
+        <div class="row" style="height:350px">
+            <div class="col-lg-4">
+                <div class="thumbnail">
+                    <img class="img-rounded img-responsive" src="https://upload.wikimedia.org/wikipedia/commons/b/b2/Map_of_the_Donbass.png" alt="Donbass Region" />
+                    <div class="caption">
+                        Map of the Donbass by <a href="https://commons.wikimedia.org/wiki/User:RGloucester">RGloucester</a> is licensed under <a href="https://creativecommons.org/licenses/by-sa/3.0/deed.en">CC BY-SA 3.0</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-8">
+                <div class="row">
+                    <div class="col-lg-12">
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
+                        et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
+                        ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat
+                        nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id
+                        est laborum.
+                    </div>
+                </div>
+
+                <div class="row">
+
+                </div>
+
+                <div class="row">
+                    <div class="col-lg-12">
+                        <strong>You can contact us <a asp-action="Contact" class="btn-link">Here</a>.</strong>
+                    </div>
+                </div>
+
+                <div class="row">
+                    <div class="col-lg-12">
+                        <strong>You can read more about the history on Donbass <a asp-action="History" class="btn-link">Here</a>.</strong>
+                    </div>
+                </div>
+            </div>
         </div>
-        <div class="col-sm-8">
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore 
-            et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip 
-            ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat 
-            nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id 
-            est laborum.
+
+        <div class="row">
+            <div class="col-lg-12">
+                <h2>About the Site</h2>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
+                et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
+                ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat
+                nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id
+                est laborum.
+            </div>
         </div>
     </div>
-    </body>
+</body>
 
 
 </html>
