Fixed Bootstrap crap

--- a/CommunityInformation/CommunityInformation/Views/Home/Index.cshtml
+++ b/CommunityInformation/CommunityInformation/Views/Home/Index.cshtml
@@ -16,9 +16,10 @@
 
 <body>
     <h1 class="text-center text-primary">Welcome To Donbass, Ukraine!</h1>
+    <br>
 
     <div class="container">
-        <div class="row" style="height:350px">
+        <div class="row">
             <div class="col-lg-4">
                 <div class="thumbnail">
                     <img class="img-rounded img-responsive" src="https://upload.wikimedia.org/wikipedia/commons/b/b2/Map_of_the_Donbass.png" alt="Donbass Region" />
