--- a/CommunityInformation/CommunityInformation/Views/Info/Info.cshtml
+++ b/CommunityInformation/CommunityInformation/Views/Info/Info.cshtml
@@ -16,7 +16,8 @@
 
 <body>
     <h1 class="text-center text-primary">Highlights of Donbass</h1>
-    
+    <br>
+
     <div class="container center-block">
         <div class="row">
             <div class="col-lg-12">
@@ -28,15 +29,13 @@
                 </div>
             </div>
         </div>
-
+        <br>
         <div class="row">
             <div class="col-lg-12">
                 <h3>Live Map of War in Donbass</h3>
-                <iframe style="height:700px" src="https://liveuamap.com/"></iframe>
+                <iframe style="height:700px; width:100%" src="https://liveuamap.com/"></iframe>
             </div>
         </div>
     </div>    
 </body>
-
-
 </html>
