--- a/CommunityInformation/CommunityInformation/Views/Shared/_Layout.cshtml
+++ b/CommunityInformation/CommunityInformation/Views/Shared/_Layout.cshtml
@@ -40,9 +40,10 @@
 
     <div class="container body-content">
         @RenderBody()
+
         <hr />
         <footer>
-            <!--<p>&copy; 2018 - CommunityInformation</p>-->
+            <p>&copy; 2018 - CommunityInformation</p>
         </footer>
     </div>
 
