--- a/CommunityInformation/CommunityInformation/Views/Info/Info.cshtml
+++ b/CommunityInformation/CommunityInformation/Views/Info/Info.cshtml
@@ -19,6 +19,24 @@
     <br>
 
     <div class="container center-block">
+
+        <div class="row">
+            <div class="col-lg-12">
+                <div class="text-center">
+                    <h3><a asp-action="Locations">Locations</a> of Donbass.</h3>
+                </div>
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="col-lg-12">
+                <div class="text-center">
+                    <h3><a asp-action="People">People</a> of Donbass.</h3>
+                </div>
+            </div>
+        </div>
+        <br />
+
         <div class="row">
             <div class="col-lg-12">
                 <div class="thumbnail">
