Added all pages to navbar

--- a/CommunityInformation/CommunityInformation/Views/Shared/_Layout.cshtml
+++ b/CommunityInformation/CommunityInformation/Views/Shared/_Layout.cshtml
@@ -30,7 +30,11 @@
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
+                    <li><a asp-area="" asp-controller="Home" asp-action="History">History</a></li>
+                    <li><a asp-area="" asp-controller="Home" asp-action="Contact">Contact</a></li>
                     <li><a asp-area="" asp-controller="Info" asp-action="Info">Information</a></li>
+                    <li><a asp-area="" asp-controller="Info" asp-action="Locations">Locations</a></li>
+                    <li><a asp-area="" asp-controller="Info" asp-action="People">People</a></li>
                 </ul>
             </div>
         </div>
