Started converting lab 1 to lab 2

--- a/CommunityInformation/CommunityInformation/Views/Home/Index.cshtml
+++ b/CommunityInformation/CommunityInformation/Views/Home/Index.cshtml
@@ -63,7 +63,7 @@
         <br>        
         <div class="row">
             <div class="col-lg-12">
-                <strong>You can contact us <a asp-action="Contact" class="btn-link">Here</a>.</strong>
+                <strong>You can message users <a asp-action="Messager" class="btn-link">Here</a>.</strong>
             </div>
         </div>
     </div>
