--- a/CommunityInformation/CommunityInformation/Views/Info/Locations.cshtml
+++ b/CommunityInformation/CommunityInformation/Views/Info/Locations.cshtml
@@ -1,6 +1,7 @@
 ﻿@{
-    //Layout = null;
+//Layout = null;
 }
+@model CommunityInformation.Models.LocationEntry
 
 <!DOCTYPE html>
 <html>
@@ -18,44 +19,50 @@
     <h1 class="text-center text-primary">Must See Locations of Donbass</h1>
     <br>
 
-    <div class="container">
-        <div class="row">
-            <div class="col-lg-4">
-                <div class="thumbnail">
-                    <img class="img-rounded img-responsive" src="https://upload.wikimedia.org/wikipedia/commons/c/ce/Ruins_of_Donetsk_International_airport_%2816%29.jpg" alt="Donetsk Airport" />
-                    <div class="caption">
-                        Ruins of Donetsk Sergey Prokofiev International Airport, December 24, 2014. by <a href="https://www.youtube.com/channel/UCB6qcolOfP23ckDu3Bd8fvw">Правда ДНР</a> is licensed under <a href="https://creativecommons.org/licenses/by/3.0/deed.en">CC BY 3.0</a>
-                    </div>
-                </div>
-            </div>
-            <div class="col-lg-8">
-                <h3>Donetsk International Airport</h3>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
+    @{ 
+        List<LocationEntry> locations = new List<LocationEntry>();
+        locations.Add(new LocationEntry()
+        {
+            Name = "Donetsk International Airport",
+            ImageURL = "https://upload.wikimedia.org/wikipedia/commons/c/ce/Ruins_of_Donetsk_International_airport_%2816%29.jpg",
+            Description = @" Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
                 et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
                 ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat
                 nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id
-                est laborum.
-            </div>
-        </div>
+                est laborum."
+        });
 
-        <div class="row">
-            <div class="col-lg-4">
-                <div class="thumbnail">
-                    <img class="img-rounded img-responsive" src="https://upload.wikimedia.org/wikipedia/commons/9/9d/%D0%94%D0%BE%D1%80%D0%BE%D0%B3%D0%B0_%D0%BD%D0%B0_%D0%94%D0%B5%D0%B1%D0%B0%D0%BB%D1%8C%D1%86%D0%B5%D0%B2%D0%B5_%2816170898900%29.jpg" alt="Debaltseve" />
-                    <div class="caption">
-                        The road is in rocket holes and craters, with broken bridges and empty without transport by <a href="https://www.flickr.com/people/83934818@N03">Viktor Kovalenko</a> is licensed under <a href="https://creativecommons.org/licenses/by-sa/2.0/deed.en">CC BY-SA 2.0</a>
-                    </div>
-                </div>
-            </div>
-            <div class="col-lg-8">
-                <h3>Debaltseve</h3>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
+        locations.Add(new LocationEntry()
+        {
+            Name = "Debaltseve",
+            ImageURL = "https://upload.wikimedia.org/wikipedia/commons/9/9d/%D0%94%D0%BE%D1%80%D0%BE%D0%B3%D0%B0_%D0%BD%D0%B0_%D0%94%D0%B5%D0%B1%D0%B0%D0%BB%D1%8C%D1%86%D0%B5%D0%B2%D0%B5_%2816170898900%29.jpg",
+            Description = @" Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
                 et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
                 ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat
                 nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id
-                est laborum.
-            </div>
-        </div>
+                est laborum."
+        });
+    }
+
+
+
+    <div class="container">
+        @{
+            foreach (var e in locations)
+            {
+                <div class="row">
+                    <div class="col-lg-4">
+                        <div class="thumbnail">
+                            <img class="img-rounded img-responsive" src="@e.ImageURL" />
+                        </div>
+                    </div>
+                    <div class="col-lg-8">
+                        <h3>@e.Name</h3>
+                        @e.Description
+                    </div>
+                </div>
+            }
+        }
     </div>
 
 
