--- a/CommunityInformation/CommunityInformation/Views/Shared/_Layout.cshtml
+++ b/CommunityInformation/CommunityInformation/Views/Shared/_Layout.cshtml
@@ -31,6 +31,7 @@
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
                     <li><a asp-area="" asp-controller="Home" asp-action="History">History</a></li>
+                    <li><a asp-area="" asp-controller="Home" asp-action="Messages">Messages</a></li>
                     <li><a asp-area="" asp-controller="Home" asp-action="Messager">Messager</a></li>
                     <li><a asp-area="" asp-controller="Info" asp-action="Info">Information</a></li>
                     <li><a asp-area="" asp-controller="Info" asp-action="Locations">Locations</a></li>
