--- a/CommunityInformation/CommunityInformation/Views/Home/Messenger.cshtml
+++ b/CommunityInformation/CommunityInformation/Views/Home/Messenger.cshtml
@@ -10,7 +10,7 @@
 
 <head>
     <meta name="viewport" content="width=device-width" />
-    <title>Donbass Contact</title>
+    <title>Messenger</title>
     <link rel="stylesheet" href="~/css/styles.css">
     <link />
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.css">
@@ -24,7 +24,7 @@
         <div class="panel-heading text-center"><h4>Contact</h4></div>
         <div class="panel-body">
 
-            <form class="p-a-1" asp-controller="Home" asp-action="Messager" method="post">
+            <form class="p-a-1" asp-controller="Home" asp-action="Messenger" method="post">
                 <div asp-validation-summary="All"></div>
 
                 <div class="form-group">
