--- a/CommunityInformation/CommunityInformation/Views/Home/Messages.cshtml
+++ b/CommunityInformation/CommunityInformation/Views/Home/Messages.cshtml
@@ -1,8 +1,8 @@
 ﻿
 @{
-    //Layout = null;
+//Layout = null;
 }
-@model CommunityInformation.Models.Message
+@model List<Message>
 
 <!DOCTYPE html>
 
@@ -14,25 +14,39 @@
     <title>Messages</title>
 </head>
 <body>
-    <h1 class="text-center">Messages</h1>
+    <h1 class="text-center">Messages for @Repository.LoggedIn.Name</h1>
+    <br>
+    <div> Send a Message using: <a class="btn btn-default" asp-area="" asp-controller="Home" asp-action="Messenger">Messenger</a></div>
     <br>
 
     <div class="container">
-       <div class="row">
-           <div class="col-lg-2">
-               <span class="text-danger"><strong>Sender:</strong>  Mr. Blah</span>
-           </div>
+        @{
+            int i = 0;
+            foreach (var m in @Model)
+            {
+                if (m.Sender != Repository.LoggedIn && m.Recipient != Repository.LoggedIn)
+                {
+                    // messages have to be from or to the logged in user
+                    continue;
+                }
 
-           <div class="col-lg-10">
-               Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
-               et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
-               ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat
-               nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id
-               est laborum.
-               <br>
-               <strong>View Replies</strong>
-           </div>
-       </div>
+                i++;
+                // make every other message color different
+                <div class="row @(i % 2 == 0 ? "bg-info" : "")">
+                    <div class="col-lg-2 @(i % 2 != 0 ? "bg-primary" : "")">
+                        <h3>@i.</h3>
+                        <strong>@(Repository.LoggedIn == m.Sender ? "To: " + m.Recipient.Name : "From: " + m.Sender.Name)</strong>
+                    </div>
+
+                    <div class="col-lg-10">
+                        <h4>@m.Subject</h4>
+                        @m.Text
+                        <br>
+                    </div>
+                </div>
+            }
+        }
+
     </div>
 </body>
 </html>
