--- a/CommunityInformation/CommunityInformation/Views/Home/Messages.cshtml
+++ b/CommunityInformation/CommunityInformation/Views/Home/Messages.cshtml
@@ -22,7 +22,11 @@
     <div class="container">
         @{
             int i = 0;
-            foreach (var m in Repository.Messages)
+            List<Message> ms = Repository.Messages;
+            // sort by newest first
+            ms = ms.OrderByDescending(m => m.SentDate).ToList();
+
+            foreach (var m in ms)
             {
                 if (m.Sender != Repository.LoggedIn && m.Recipient != Repository.LoggedIn)
                 {
@@ -32,23 +36,23 @@
 
                 i++;
                 // make every other message color different
-            <div class="row @(i % 2 == 0 ? "bg-info" : "")">
-                <div class="col-lg-2 @(i % 2 != 0 ? "bg-primary" : "")">
-                    <h3>@i.</h3>
-                    <strong>@(Repository.LoggedIn == m.Sender ? "To: " + m.Recipient.Name : "From: " + m.Sender.Name)</strong>
-                    <br>
-                    <span>@m.SentDate</span>
-                </div>
+                <div class="row @(i % 2 == 0 ? "bg-info" : "")">
+                    <div class="col-lg-2 @(i % 2 != 0 ? "bg-primary" : "")">
+                        <h3>@i.</h3>
+                        <strong>@(Repository.LoggedIn == m.Sender ? "To: " + m.Recipient.Name : "From: " + m.Sender.Name)</strong>
+                        <br>
+                        <span>@m.SentDate</span>
+                    </div>
 
-                <div class="col-lg-9">
-                    <h4>@m.Subject</h4>
-                    @m.Text
-                    <br>
-                </div>
+                    <div class="col-lg-9">
+                        <h4>@m.Subject</h4>
+                        @m.Text
+                        <br>
+                    </div>
 
-                @{
-                    if (Repository.LoggedIn != m.Sender)
-                    {
+                    @{
+                        if (Repository.LoggedIn != m.Sender)
+                        {
                         <div class="col-lg-1">
                             <br>
                             <form class="p-a-1" asp-controller="Home" asp-action="Messages" method="post">
@@ -57,9 +61,9 @@
                                 <button class="btn btn-primary" type="submit">Reply</button>
                             </form>
                         </div>
-                    }
-                }                   
-            </div>
+                        }
+                    }                   
+                </div>
             }
         }
 
