--- a/CommunityInformation/CommunityInformation/Views/Info/People.cshtml
+++ b/CommunityInformation/CommunityInformation/Views/Info/People.cshtml
@@ -42,6 +42,20 @@
             nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id
             est laborum."
         });
+
+        peoples.Add(new PersonEntry()
+        {
+            Name = "Igor Venediktovich Plotnitsky",
+            ImageURL = "https://upload.wikimedia.org/wikipedia/commons/a/aa/Ihor_Plotnytskiy.jpg",
+            Description = @" Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
+            et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
+            ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat
+            nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id
+            est laborum."
+        });
+
+        // sort
+        peoples.Sort((p1, p2) => p1.Name.CompareTo(p2.Name));
     }
 
 
