--- a/CommunityInformation/CommunityInformation/Views/Home/Messages.cshtml
+++ b/CommunityInformation/CommunityInformation/Views/Home/Messages.cshtml
@@ -2,7 +2,7 @@
 @{
 //Layout = null;
 }
-@model Message
+@model List<Message>
 
 <!DOCTYPE html>
 
@@ -14,21 +14,21 @@
     <title>Messages</title>
 </head>
 <body>
-    <h1 class="text-center">Messages for @Repository.LoggedIn.Name</h1>
+    <h1 class="text-center">Messages for @ViewBag.loggedIn.Name</h1>
     <br>
-    <div> Send a Message using: <a class="btn btn-default" asp-area="" asp-controller="Home" asp-action="Messenger">Messenger</a></div>
+    <div> Send a Message using: <a class="btn btn-default" asp-route-Recipient="0" asp-route-Subject="" asp-action="Messenger">Send Message</a></div>
     <br>
 
     <div class="container">
         @{
             int i = 0;
-            List<Message> ms = Repository.Messages;
+            List<Message> ms = Model;
             // sort by newest first
             ms = ms.OrderByDescending(m => m.SentDate).ToList();
 
             foreach (var m in ms)
             {
-                if (m.Sender != Repository.LoggedIn && m.Recipient != Repository.LoggedIn)
+                if (m.Sender != ViewBag.loggedIn && m.Recipient != ViewBag.loggedIn)
                 {
                     // messages have to be from or to the logged in user
                     continue;
@@ -39,7 +39,7 @@
                 <div class="row @(i % 2 == 0 ? "bg-info" : "")">
                     <div class="col-lg-2 @(i % 2 != 0 ? "bg-primary" : "")">
                         <h3>@i.</h3>
-                        <strong>@(Repository.LoggedIn == m.Sender ? "To: " + m.Recipient.Name : "From: " + m.Sender.Name)</strong>
+                        <strong>@(ViewBag.loggedIn == m.Sender ? "To: " + m.Recipient.Name : "From: " + m.Sender.Name)</strong>
                         <br>
                         <span>@m.SentDate</span>
                     </div>
@@ -51,15 +51,11 @@
                     </div>
 
                     @{
-                        if (Repository.LoggedIn != m.Sender)
+                        if (ViewBag.loggedIn != m.Sender)
                         {
                         <div class="col-lg-1">
                             <br>
-                            <form class="p-a-1" asp-controller="Home" asp-action="Messages" method="post">
-                                <input asp-for="Recipient" value="@m.GetSenderAsInt()" type="hidden" />
-                                <input asp-for="Subject" value="@m.Subject" type="hidden" />
-                                <button class="btn btn-primary" type="submit">Reply</button>
-                            </form>
+                            <a asp-route-Recipient="@m.GetSenderAsInt()" asp-route-Subject="@m.Subject" asp-action="Messenger" class="btn btn-primary">Reply</a>
                         </div>
                         }
                     }                   
