--- a/CommunityInformation/CommunityInformation/Views/Info/Locations.cshtml
+++ b/CommunityInformation/CommunityInformation/Views/Info/Locations.cshtml
@@ -1,5 +1,7 @@
 ﻿@{
-//Layout = null;
+    //Layout = null;
+    ViewData["Title"] = "Locations";
+}
 }
 @model CommunityInformation.Models.LocationEntry
 
@@ -19,17 +21,17 @@
     <h1 class="text-center text-primary">Must See Locations of Donbass</h1>
     <br>
 
-    @{ 
+    @{
         List<LocationEntry> locations = new List<LocationEntry>();
         locations.Add(new LocationEntry()
         {
             Name = "Donetsk International Airport",
             ImageURL = "https://upload.wikimedia.org/wikipedia/commons/c/ce/Ruins_of_Donetsk_International_airport_%2816%29.jpg",
             Description = @" Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
-                et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
-                ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat
-                nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id
-                est laborum."
+            et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
+            ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat
+            nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id
+            est laborum."
         });
 
         locations.Add(new LocationEntry()
@@ -37,10 +39,10 @@
             Name = "Luhansk",
             ImageURL = "https://upload.wikimedia.org/wikipedia/commons/3/3b/%D0%9E%D1%82%D0%B5%D0%BB%D1%8C_%D0%A3%D0%BA%D1%80%D0%B0%D0%B8%D0%BD%D0%B0.jpg",
             Description = @" Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
-                et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
-                ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat
-                nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id
-                est laborum."
+            et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
+            ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat
+            nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id
+            est laborum."
         });
 
         locations.Add(new LocationEntry()
@@ -48,10 +50,10 @@
             Name = "Debaltseve",
             ImageURL = "https://upload.wikimedia.org/wikipedia/commons/9/9d/%D0%94%D0%BE%D1%80%D0%BE%D0%B3%D0%B0_%D0%BD%D0%B0_%D0%94%D0%B5%D0%B1%D0%B0%D0%BB%D1%8C%D1%86%D0%B5%D0%B2%D0%B5_%2816170898900%29.jpg",
             Description = @" Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
-                et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
-                ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat
-                nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id
-                est laborum."
+            et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
+            ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat
+            nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id
+            est laborum."
         });
 
         //sort
