--- a/CommunityInformation/CommunityInformation/Views/Home/Messenger.cshtml
+++ b/CommunityInformation/CommunityInformation/Views/Home/Messenger.cshtml
@@ -30,8 +30,8 @@
 
                 <div class="form-group">
 
-                    <label asp-for="Recipient">To:</label>
-                    <select class="form-control" asp-for="Recipient">
+                    <label asp-for="RecipientInt">To:</label>
+                    <select class="form-control" asp-for="RecipientInt">
                         @{
                             // list contacts
                             int i = 0;
